<resources>
    <string name="app_name">SmartNest</string>
    <string name="first_page_button_title">Hesaplar</string>
    <string name="first_page_title">inohom+</string>
    <string name="first_page_version_number">V.1.7.0</string>
    <string name="concierge">Konsiyerj</string>
    <string name="dashboard_icon_for_concierge">dashboard icon for Konsiyerj</string>
    <string name="dashboard_icon_for_site_management">dashboard icon for site yonetimi</string>
    <string name="site_management">Site Yönetimi</string>
    <string name="sensor">Sensör</string>
    <string name="dashboard_icon_for_sensor">dashboard icon for sensor</string>
    <string name="air_cond">Klima</string>
    <string name="dashboard_icon_for_air_conditioning">dashboard icon for klima</string>
    <string name="heating">Isıtma</string>
    <string name="dashboard_icon_for_heating">dashboard icon for isitma</string>
    <string name="system">Sistem</string>
    <string name="interkom">Interkom</string>
    <string name="dashboard_icon_for_system">dashboard icon for sistem</string>
    <string name="alarm">Alarm</string>
    <string name="dashboard_icon_for_interkom">dashboard icon for interkom</string>
    <string name="camera">Kamera</string>
    <string name="dashboard_icon_for_alarm">dashboard icon for alarm</string>
    <string name="control">Kumanda</string>
    <string name="dashboard_icon_for_control">dashboard icon for kumanda</string>
    <string name="scenario">Senaryo</string>
    <string name="plug">Priz</string>
    <string name="dashboard_icon_for_scenario">dashboard icon for senaryo</string>
    <string name="curtain">Perde</string>
    <string name="dashboard_icon_for_plug">dashboard icon for priz</string>
    <string name="light">Aydınlatma</string>
    <string name="favorites">Favoriler</string>
    <string name="dashboard_icon_for_light">dashboard icon for Aydınlatma</string>
    <string name="dashboard_icon_for_favorites">dashboard icon for favoriler</string>
    <string name="settings">Settings</string>
    <string name="inohom">inohom</string>
    <string name="fault_light">Saha-Arıza Ayd 1</string>
    <string name="basement_storage_light">Bodrum Depo Ayd 1</string>
    <string name="kitchen_light">Mutfak Aydınlatma</string>
    <string name="enterLight">Giriş Aydınlatma</string>
    <string name="management_map_spot_card">Yönetim Harita Spot</string>
    <string name="hanging_led">Sarkan Led</string>
    <string name="managementSpotCard">Yönetim Spot</string>
    <string name="panel_lighting_2">Pano Aydınlatma 2</string>
    <string name="technical_lighting">Teknik Aydınlatma</string>
    <string name="r_d_wc">Arge WC</string>
    <string name="back">Back button</string>
</resources>